--- a/app/src/main/res/layout/camera_item.xml
+++ b/app/src/main/res/layout/camera_item.xml
@@ -4,14 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextureView
-        android:id="@+id/tv"
+    <SurfaceView
+        android:id="@+id/sv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintDimensionRatio="3:4"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:textSize="24sp"
         android:id="@+id/desc_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
